--- a/views/components/Navbar.hbs
+++ b/views/components/Navbar.hbs
@@ -7,7 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/perfil">Perfil</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/auth/login">LogIn</a>
@@ -16,7 +19,7 @@
           <a class="nav-link" href="/auth/logout">LogOut</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/auth/singin">singIn</a>
+          <a class="nav-link" href="/auth/register">singIn</a>
         </li>
       </ul>
     </div>
