--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,1 +1,12 @@
-<h1>Login</h1>
+<h1 class="text-center my-5">Login de usuarios</h1>
+
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <form action="/auth/login" method="post">
+            <input type="hidden" name="_csrf" value="{{csrfToken}}" />
+            <input type="text" name="email" class="form-control mb-2" placeholder="ingrese su email" />
+            <input type="password" name="password" class="form-control mb-2" placeholder="ingrese su password" />
+            <button class="btn btn-primary" type="submit">Acceder</button>
+        </form>
+    </div>
+</div>
